Continue work on background

--- a/references.bib
+++ b/references.bib
@@ -21,6 +21,20 @@
   keywords = {debugging,python,python-2-7,reverse-engineering,tracing}
 }
 
+@inproceedings{abadiTensorFlowSystemLargeScale2016,
+  title = {\{\vphantom\}{{TensorFlow}}\vphantom\{\}: {{A System}} for \{\vphantom\}{{Large-Scale}}\vphantom\{\} {{Machine Learning}}},
+  shorttitle = {\{\vphantom\}{{TensorFlow}}\vphantom\{\}},
+  author = {Abadi, Martin and Barham, Paul and Chen, Jianmin and Chen, Zhifeng and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and Ghemawat, Sanjay and Irving, Geoffrey and Isard, Michael and Kudlur, Manjunath and Levenberg, Josh and Monga, Rajat and Moore, Sherry and Murray, Derek G. and Steiner, Benoit and Tucker, Paul and Vasudevan, Vijay and Warden, Pete and Wicke, Martin and Yu, Yuan and Zheng, Xiaoqiang},
+  date = {2016},
+  pages = {265--283},
+  url = {https://www.usenix.org/conference/osdi16/technical-sessions/presentation/abadi},
+  urldate = {2024-11-12},
+  eventtitle = {12th {{USENIX Symposium}} on {{Operating Systems Design}} and {{Implementation}} ({{OSDI}} 16)},
+  isbn = {978-1-931971-33-1},
+  langid = {english},
+  file = {/Users/edjg/Zotero/storage/3XT98SWY/Abadi et al. - 2016 - TensorFlow A System for Large-Scale Machine Learning.pdf}
+}
+
 @inproceedings{akerblomMeasuringPolymorphismPython2015,
   title = {Measuring Polymorphism in Python Programs},
   booktitle = {Proceedings of the 11th {{Symposium}} on {{Dynamic Languages}}},
@@ -299,6 +313,24 @@
   file = {/Users/edjg/Zotero/storage/PTHTQWMD/Canonicalization.html}
 }
 
+@article{desislavovTrendsAIInference2023,
+  title = {Trends in {{AI}} Inference Energy Consumption: {{Beyond}} the Performance-vs-Parameter Laws of Deep Learning},
+  shorttitle = {Trends in {{AI}} Inference Energy Consumption},
+  author = {Desislavov, Radosvet and Martínez-Plumed, Fernando and Hernández-Orallo, José},
+  date = {2023-04-01},
+  journaltitle = {Sustainable Computing: Informatics and Systems},
+  shortjournal = {Sustainable Computing: Informatics and Systems},
+  volume = {38},
+  pages = {100857},
+  issn = {2210-5379},
+  doi = {10.1016/j.suscom.2023.100857},
+  url = {https://www.sciencedirect.com/science/article/pii/S2210537923000124},
+  urldate = {2025-06-07},
+  abstract = {The progress of some AI paradigms such as deep learning is said to be linked to an exponential growth in the number of parameters. There are many studies corroborating these trends, but does this translate into an exponential increase in energy consumption? In order to answer this question we focus on inference costs rather than training costs, as the former account for most of the computing effort, solely because of the multiplicative factors. Also, apart from algorithmic innovations, we account for more specific and powerful hardware (leading to higher FLOPS) that is usually accompanied with important energy efficiency optimisations. We also move the focus from the first implementation of a breakthrough paper towards the consolidated version of the techniques one or two year later. Under this distinctive and comprehensive perspective, we analyse relevant models in the areas of computer vision and natural language processing: for a sustained increase in performance we see a much softer growth in energy consumption than previously anticipated. The only caveat is, yet again, the multiplicative factor, as future AI increases penetration and becomes more pervasive.},
+  keywords = {AI progress,Artificial Intelligence,Deep learning,Energy consumption,Inference,Performance analysis,Performance evaluation},
+  file = {/Users/edjg/Zotero/storage/RXHCMB74/Desislavov et al. - 2023 - Trends in AI inference energy consumption Beyond the performance-vs-parameter laws of deep learning.pdf}
+}
+
 @inproceedings{driesenDirectCostVirtual1996,
   title = {The Direct Cost of Virtual Function Calls in {{C}}++},
   booktitle = {Proceedings of the 11th {{ACM SIGPLAN}} Conference on {{Object-oriented}} Programming, Systems, Languages, and Applications},
@@ -324,6 +356,24 @@
   urldate = {2024-10-21},
   abstract = {It's 2022. Moore's Law and Dennard scaling have run out of steam, making it harder than ever to achieve high performance - especially in Python. This talk first explains in detail the unique challenges that Python poses to programmers. It then presents Scalene, a novel high-performance CPU, GPU and memory profiler for Python that does many things that past Python profilers do not and cannot do. Scalene both runs orders of magnitude faster than other profilers while delivering more accurate and more actionable information that's especially valuable to Python programmers. Emery Berger Professor, University of Massachusetts Amherst @emeryberger Emery Berger is a Professor of Computer Sciences at the University of Massachusetts Amherst, the flagship campus of the UMass system. Professor Berger and his collaborators have built numerous widely adopted software systems including Hoard, a fast and scalable memory manager that accelerates multithreaded applications (on which the Mac OS X memory manager is based); DieHard/DieHarder, error-avoiding and secure memory managers that influenced Windows, and Coz, a "causal profiler" that ships with modern Linux distros. He is also the developer and maintainer of CSrankings.org. His honors include an NSF CAREER Award, Most Influential Paper Awards at OOPSLA, at PLDI, and ASPLOS; five CACM Research Highlights, and Best Paper Awards at FAST, OOPSLA, and SOSP; he is an ACM Fellow. Professor Berger served six years as an elected member of the SIGPLAN Executive Committee; a decade as Associate Editor of TOPLAS; he was Program Chair for PLDI 2016 and co-Program Chair of ASPLOS 2021. ------- Sponsored by: ------- Stream is the \# 1 Chat API for custom messaging apps. Activate your free 30-day trial to explore Stream Chat. https://gstrm.io/tsl},
   venue = {Strange Loop Conference}
+}
+
+@article{esmaeilzadehDarkSiliconEnd2012,
+  title = {Dark {{Silicon}} and the {{End}} of {{Multicore Scaling}}},
+  author = {Esmaeilzadeh, Hadi and Blem, Emily and St. Amant, Renee and Sankaralingam, Karthikeyan and Burger, Doug},
+  date = {2012-05},
+  journaltitle = {IEEE Micro},
+  volume = {32},
+  number = {3},
+  pages = {122--134},
+  issn = {1937-4143},
+  doi = {10.1109/MM.2012.17},
+  url = {https://ieeexplore.ieee.org/document/6175879},
+  urldate = {2024-10-14},
+  abstract = {A key question for the microprocessor research and design community is whether scaling multicores will provide the performance and value needed to scale down many more technology generations. To provide a quantitative answer to this question, a comprehensive study that projects the speedup potential of future multicores and examines the underutilization of integration capacity—dark silicon—is timely and crucial.},
+  eventtitle = {{{IEEE Micro}}},
+  keywords = {Benchmark testing,dark silicon,Microarchitecture,modeling,Moore's law,multicore,Multicore processing,Network topology,Performance evaluation,power,Silicon,technology scaling,Transistors},
+  file = {/Users/edjg/Zotero/storage/VNNCFRAF/Esmaeilzadeh et al. - 2012 - Dark Silicon and the End of Multicore Scaling.pdf;/Users/edjg/Zotero/storage/DNKEE3FB/6175879.html}
 }
 
 @inproceedings{fehrIRDLIRDefinition2022a,
@@ -371,6 +421,23 @@
   abstract = {Traditionally, compiler researchers either conduct experiments within an existing production compiler or develop their own prototype compiler; both options come with trade-offs.                                On one hand, prototyping in a production compiler can be cumbersome, as they are often optimized for program compilation speed at the expense of software simplicity and development speed.                                On the other hand, the transition from a prototype compiler to production requires significant engineering work.                                To bridge this gap, we introduce the concept of sidekick compiler frameworks, an approach that uses multiple frameworks that interoperate with each other by leveraging textual interchange formats and declarative descriptions of abstractions.                                Each such compiler framework is specialized for specific use cases, such as performance or prototyping.                                Abstractions are by design shared across frameworks, simplifying the transition from prototyping to production.                                We demonstrate this idea with xDSL, a sidekick for MLIR focused on prototyping and teaching.                                xDSL interoperates with MLIR through a shared textual IR and the exchange of IRs through an IR Definition Language.                                The benefits of sidekick compiler frameworks are evaluated by showing on three use cases how xDSL impacts their development: teaching, DSL compilation, and rewrite system prototyping.                                We also investigate the trade-offs that xDSL offers, and demonstrate how we simplify the transition between frameworks using the IRDL dialect.                                With sidekick compilation, we envision a future in which engineers minimize the cost of development by choosing a framework built for their immediate needs, and later transitioning to production with minimal overhead.},
   isbn = {979-8-4007-1275-3},
   file = {/Users/edjg/Zotero/storage/7YEB29W8/Fehr et al. - 2025 - xDSL Sidekick Compilation for SSA-Based Compilers.pdf}
+}
+
+@inproceedings{fuchsAcceleratorWallLimits2019,
+  title = {The {{Accelerator Wall}}: {{Limits}} of {{Chip Specialization}}},
+  shorttitle = {The {{Accelerator Wall}}},
+  booktitle = {2019 {{IEEE International Symposium}} on {{High Performance Computer Architecture}} ({{HPCA}})},
+  author = {Fuchs, Adi and Wentzlaff, David},
+  date = {2019-02},
+  pages = {1--14},
+  issn = {2378-203X},
+  doi = {10.1109/HPCA.2019.00023},
+  url = {https://ieeexplore.ieee.org/document/8675237},
+  urldate = {2024-10-14},
+  abstract = {Specializing chips using hardware accelerators has become the prime means to alleviate the gap between the growing computational demands and the stagnating transistor budgets caused by the slowdown of CMOS scaling. Much of the benefits of chip specialization stems from optimizing a computational problem within a given chip's transistor budget. Unfortunately, the stagnation of the number of transistors available on a chip will limit the accelerator design optimization space, leading to diminishing specialization returns, ultimately hitting an accelerator wall. In this work, we tackle the question of what are the limits of future accelerators and chip specialization? We do this by characterizing how current accelerators depend on CMOS scaling, based on a physical modeling tool that we constructed using datasheets of thousands of chips. We identify key concepts used in chip specialization, and explore case studies to understand how specialization has progressed over time in different applications and chip platforms (e.g., GPUs, FPGAs, ASICs)1. Utilizing these insights, we build a model which projects forward to see what future gains can and cannot be enabled from chip specialization. A quantitative analysis of specialization returns and technological boundaries is critical to help researchers understand the limits of accelerators and develop methods to surmount them.},
+  eventtitle = {2019 {{IEEE International Symposium}} on {{High Performance Computer Architecture}} ({{HPCA}})},
+  keywords = {Accelerator Wall,CMOS Scaling,Computer architecture,Field programmable gate arrays,Mathematical model,Measurement,Moore's Law,Semiconductor device modeling,Throughput,Transistors},
+  file = {/Users/edjg/Zotero/storage/QW8SWZBJ/Fuchs and Wentzlaff - 2019 - The Accelerator Wall Limits of Chip Specialization.pdf;/Users/edjg/Zotero/storage/BGKNDB7P/8675237.html}
 }
 
 @software{gaoVizTracer2025,
@@ -462,6 +529,23 @@
   pubstate = {prepublished},
   keywords = {Computer Science - Performance,Computer Science - Programming Languages},
   file = {/Users/edjg/Zotero/storage/C65BSPZP/Kempen et al. - 2025 - It's Not Easy Being Green On the Energy Efficiency of Programming Languages.pdf;/Users/edjg/Zotero/storage/WLEKD4IA/2410.html}
+}
+
+@incollection{knuthEarlyDevelopmentProgramming1980,
+  title = {The {{Early Development}} of {{Programming Languages}}*†},
+  booktitle = {A {{History}} of {{Computing}} in the {{Twentieth Century}}},
+  author = {Knuth, DONALD E. and Pardo, LUIS TRABB},
+  editor = {Metropolis, N. and Howlett, J. and Rota, GIAN-CARLO},
+  date = {1980-01-01},
+  pages = {197--273},
+  publisher = {Academic Press},
+  location = {San Diego},
+  doi = {10.1016/B978-0-12-491650-0.50019-8},
+  url = {https://www.sciencedirect.com/science/article/pii/B9780124916500500198},
+  urldate = {2025-06-07},
+  abstract = {This paper surveys the evolution of “high-lever” programming languages during the first decade of computer programming activity. We discuss the contributions of Zuse in 1945 (the “Plankalkül”), Goldstine and von Neumann in 1946 (“Flow Diagrams”), Curry in 1948 (“Composition”), Mauchly et al. in 1949 (“Short Code”), Burks in 1950 (“Intermediate PL”), Rutishauser in 1951 (“Klammerausdrücke”), Böhm in 1951 (“Formules”), Glennie in 1952 (“AUTOCODE”), Hopper et al. in 1953 (“A-2”), Laning and Zierler in 1953 (“Algebraic Interpreter”), Backus et al. in 1954–1957 (“FORTRAN”), Brooker in 1954 (“Mark I AUTOCODE”), Kamynin and Lîubimskii in 1954 (“ΠΠ-2”), Ershov in 1955 (“ΠΠ”), Grems and Porter in 1955 (“BACAIC”), Elsworth et al. in 1955 (“Kompiler 2”), Blum in 1956 (“ADES”), Perlis et al. in 1956 (“IT”), Katz et al. in 1956–1958 (“MATH-MATIC”), Bauer and Samelson in 1956–1958 (U.S. Patent 3,047,228). The principal features of each contribution are illustrated and discussed. For purposes of comparison, a particular fixed algorithm has been encoded (as far as possible) in each of the languages. This research is based primarily on unpublished source materials, and the authors hope that they have been able to compile a fairly complete picture of the early developments in this area.},
+  isbn = {978-0-12-491650-0},
+  file = {/Users/edjg/Zotero/storage/6NW7CQ66/Knuth and Pardo - 1980 - The Early Development of Programming Languages†.pdf;/Users/edjg/Zotero/storage/4ZKXNJWI/B9780124916500500198.html}
 }
 
 @online{kunalbhallaUnreasonableEffectivenessSyssettrace,
@@ -775,6 +859,17 @@
   file = {/Users/edjg/Zotero/storage/AMYIA87S/Shannon - 2011 - The construction of high-performance virtual machines for dynamic languages.pdf;/Users/edjg/Zotero/storage/SJZBBNVK/2975.html}
 }
 
+@book{stallmanUsingGnuCompiler2009,
+  title = {Using {{The Gnu Compiler Collection}}: {{A Gnu Manual For Gcc Version}} 4.3.3},
+  shorttitle = {Using {{The Gnu Compiler Collection}}},
+  author = {Stallman, Richard M. and GCC Developer Community},
+  date = {2009-02},
+  publisher = {CreateSpace},
+  location = {Scotts Valley, CA},
+  abstract = {Using the GNU COMPILER Collection. A GNU Manual for GCC Version 4.3.3. This manual documents how to use the GNU compilers, as well as their features and incompatibilities,and how to report bugs. It corresponds to the compilers (GCC) version 4.3.3.},
+  isbn = {978-1-4414-1276-8}
+}
+
 @inproceedings{steeleDebunkingExpensiveProcedure1977,
   title = {Debunking the “Expensive Procedure Call” Myth or, Procedure Call Implementations Considered Harmful or, {{LAMBDA}}: {{The Ultimate GOTO}}},
   shorttitle = {Debunking the “Expensive Procedure Call” Myth or, Procedure Call Implementations Considered Harmful or, {{LAMBDA}}},
@@ -982,6 +1077,23 @@
   urldate = {2025-05-14},
   abstract = {This is Part 1 of a series of posts. Part 2 is available here: Building a baseline JIT for Lua automatically  It is well-known that writing a good VM for a dynamic language is never an easy job. High},
   file = {/Users/edjg/Zotero/storage/L5FXCLMQ/2022-11-22.html}
+}
+
+@article{xuCopyandpatchCompilationFast2021a,
+  title = {Copy-and-Patch Compilation: A Fast Compilation Algorithm for High-Level Languages and Bytecode},
+  shorttitle = {Copy-and-Patch Compilation},
+  author = {Xu, Haoran and Kjolstad, Fredrik},
+  date = {2021-10-15},
+  journaltitle = {Artifact for Paper "Copy-and-Patch Compilation: A fast compilation algorithm for high-level languages and bytecode"},
+  shortjournal = {Proc. ACM Program. Lang.},
+  volume = {5},
+  pages = {136:1--136:30},
+  doi = {10.1145/3485513},
+  url = {https://dl.acm.org/doi/10.1145/3485513},
+  urldate = {2025-06-07},
+  abstract = {Fast compilation is important when compilation occurs at runtime, such as query compilers in modern database systems and WebAssembly virtual machines in modern browsers. We present copy-and-patch, an extremely fast compilation technique that also produces good quality code. It is capable of lowering both high-level languages and low-level bytecode programs to binary code, by stitching together code from a large library of binary implementation variants. We call these binary implementations stencils because they have holes where missing values must be inserted during code generation. We show how to construct a stencil library and describe the copy-and-patch algorithm that generates optimized binary code.  We demonstrate two use cases of copy-and-patch: a compiler for a high-level C-like language intended for metaprogramming and a compiler for WebAssembly. Our high-level language compiler has negligible compilation cost: it produces code from an AST in less time than it takes to construct the AST. We have implemented an SQL database query compiler on top of this metaprogramming system and show that on TPC-H database benchmarks, copy-and-patch generates code two orders of magnitude faster than LLVM -O0 and three orders of magnitude faster than higher optimization levels. The generated code runs an order of magnitude faster than interpretation and 14\% faster than LLVM -O0. Our WebAssembly compiler generates code 4.9X-6.5X faster than Liftoff, the WebAssembly baseline compiler in Google Chrome. The generated code also outperforms Liftoff's by 39\%-63\% on the Coremark and PolyBenchC WebAssembly benchmarks.},
+  issue = {OOPSLA},
+  file = {/Users/edjg/Zotero/storage/54SQ2BK8/Xu and Kjolstad - 2021 - Copy-and-patch compilation a fast compilation algorithm for high-level languages and bytecode.pdf}
 }
 
 @online{xuDeegenJITCapableVM2024,
