Finish background, needs slight cutting and final proof read

--- a/references.bib
+++ b/references.bib
@@ -760,6 +760,17 @@
   url = {https://peps.python.org/pep-0744/}
 }
 
+@online{pythonsoftwarefoundation3324DataModel,
+  title = {3.3.2.4. {{Data}} Model, \_\_slots\_\_},
+  author = {{Python Software Foundation}},
+  url = {https://docs.python.org/3/reference/datamodel.html#slots},
+  urldate = {2025-06-07},
+  abstract = {Objects, values and types: Objects are Python’s abstraction for data. All data in a Python program is represented by objects or by relations between objects. (In a sense, and in conformance to Von ...},
+  langid = {english},
+  organization = {Python documentation},
+  file = {/Users/edjg/Zotero/storage/8VCEFUX6/datamodel.html}
+}
+
 @online{pythonsoftwarefoundationPythonProfilers,
   title = {The {{Python Profilers}}},
   author = {{Python Software Foundation}},
@@ -802,6 +813,16 @@
   urldate = {2025-05-28},
   abstract = {Line-by-line profiling for Python},
   organization = {OpenPyUtils}
+}
+
+@online{romanowskiHowNotBe,
+  title = {How Not to Be Slow Using {{Python}}: {{Functions}} | Pawroman.Dev},
+  shorttitle = {How Not to Be Slow Using {{Python}}},
+  author = {Romanowski, Paweł},
+  url = {https://pawroman.dev/how-not-to-be-slow-using-python-functions/},
+  urldate = {2025-06-07},
+  langid = {english},
+  file = {/Users/edjg/Zotero/storage/ESWWE2N7/how-not-to-be-slow-using-python-functions.html}
 }
 
 @article{saavedraPerformanceCharacterizationOptimizing1995,
@@ -929,6 +950,17 @@
   volume = {2},
   pages = {10},
   file = {/Users/edjg/Zotero/storage/Z9FJ34TH/Sutter - 2019 - Zero-overhead deterministic exceptions Throwing values.pdf}
+}
+
+@software{thepypyteamPypyPypy2025,
+  title = {Pypy/Pypy},
+  author = {{The PyPy Team}},
+  date = {2025-06-06T05:48:20Z},
+  origdate = {2023-12-29T10:03:49Z},
+  url = {https://github.com/pypy/pypy},
+  urldate = {2025-06-08},
+  abstract = {PyPy is a very fast and compliant implementation of the Python language.},
+  organization = {PyPy}
 }
 
 @online{tomdaleAdventuresMicrobenchmarking2017,
