Rework titles and anonymise

--- a/report.tex
+++ b/report.tex
@@ -1,21 +1,5 @@
 \documentclass[12pt,a4paper,twoside]{report}
-
-% \title{Performance profiling and optimisation of the xDSL compiler framework}
-% \title{Rewriting the Rewriter: Dynamic Optimizations of User-extensible Compiler Infrastructure}
-% \title{A Necessary Evil? Dynamism in User-extensible Compiler Infrastructure}
-% \title{Inherent and Extraneous Dynamism in User-extensible Compiler Infrastructure}
-% \title{Leveraging Dynamism in User-extensible Compiler Infrastructure}
-% \title{Dynamic by Definition: Re-thinking Language Choice in User-extensible Compiler Infrastructure}
-% \title{Embracing the Dynamic Nature of User-extensible Compiler Infrastructure}
-% \title{Beyond Static Boundaries: Performance and Flexibility in Dynamic Compiler Frameworks}
-% \title{Dynamic Foundations: Reconsidering Performance Trade-offs in Compiler Infrastructure}
-% \title{Breaking the Static Paradigm: The Case for Dynamism in Compiler Framework Design}
-% \title{Beyond Static Boundaries: Inherent and Extraneous Dynamism in User-extensible Compiler Infrastructure}
-%
-% \title{A Contradiction in Terms? Performance and Dynamism in User-extensible Compiler Infrastructures}
 \title{Performance and Dynamism in User-extensible Compiler Infrastructures}
-% \title{Optimising Dynamism in User-extensible Compiler Infrastructure}
-% \title{The Cost of Dynamism in User-extensible Compiler Infrastructure}
 
 % https://www.cst.cam.ac.uk/files/acs_project_marking.pdf
 
@@ -32,7 +16,7 @@
 % Select which version this is:
 % For the (anonymous) submission (without your name or acknowledgements)
 % uncomment the following line (or let the makefile do this for you)
-% \submissiontrue
+\submissiontrue
 % For the final version (with your name) leave the above commented.
 
 
